PL2/Ejercicio2/IkeaParser.java
// Generated from C:/Users/alvar/OneDrive/Documentos/uni/3.1Cuatri/Procesadores/Laboratorio/PL2/PL2/Ejercicio2/IkeaParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class IkeaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INICIO_MONTAJE=1, FIN=2, COMO=3, EXTENSION_DE=4, INSERTAR=5, UNIR=6, COLOCAR=7, 
		GIRAR=8, CONECTAR=9, MARCAR=10, NIVELAR=11, FIJAR=12, EN=13, PARA=14, 
		CON=15, Y=16, A=17, SOBRE=18, BAJO=19, DE=20, HACIA=21, MUEBLE=22, HERRAMIENTA=23, 
		HERRAJE=24, PIEZA=25, OPCIONAL=26, ORIENTACION=27, POSICION=28, JUNTO_A=29, 
		UD_MEDIDA=30, GUION=31, PUNTOYCOMA=32, PUNTO=33, PAREN_ABRE=34, PAREN_CIERRA=35, 
		COMA=36, CUIDADO=37, NUMERO=38, MEDIDA=39, NOMBRE=40, COMENTARIO=41, ESPACIO=42, 
		ESPACIOHERRAMIENTA=43, TIPOHERRAMIENTA=44, ESPACIOHERRAJE=45, TIPOHERRAJE=46, 
		ESPACIOANUNCIO=47, ANUNCIO=48;
	public static final int
		RULE_programa = 0, RULE_declaracion_inicio = 1, RULE_declaracion_fin = 2, 
		RULE_paso = 3, RULE_comentario = 4, RULE_accion = 5, RULE_pieza = 6, RULE_mueble_referencia = 7, 
		RULE_id = 8, RULE_herramienta = 9, RULE_herramienta_lista = 10, RULE_herraje_lista = 11, 
		RULE_id_herraje = 12, RULE_distancia = 13, RULE_posicion = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracion_inicio", "declaracion_fin", "paso", "comentario", 
			"accion", "pieza", "mueble_referencia", "id", "herramienta", "herramienta_lista", 
			"herraje_lista", "id_herraje", "distancia", "posicion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'INICIO_MONTAJE'", "'FIN'", "'COMO'", "'EXTENSION_DE'", null, 
			"'UNIR'", "'COLOCAR'", "'GIRAR'", "'CONECTAR'", null, "'NIVELAR'", null, 
			"'EN'", "'PARA'", null, "'Y'", "'A'", "'SOBRE'", "'BAJO'", "'DE'", "'HACIA'", 
			"'MUEBLE'", "'HERRAMIENTA'", null, "'PIEZA'", "'OPCIONAL'", null, null, 
			"'JUNTO_A'", null, "'-'", "';'", "'.'", "'('", "')'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INICIO_MONTAJE", "FIN", "COMO", "EXTENSION_DE", "INSERTAR", "UNIR", 
			"COLOCAR", "GIRAR", "CONECTAR", "MARCAR", "NIVELAR", "FIJAR", "EN", "PARA", 
			"CON", "Y", "A", "SOBRE", "BAJO", "DE", "HACIA", "MUEBLE", "HERRAMIENTA", 
			"HERRAJE", "PIEZA", "OPCIONAL", "ORIENTACION", "POSICION", "JUNTO_A", 
			"UD_MEDIDA", "GUION", "PUNTOYCOMA", "PUNTO", "PAREN_ABRE", "PAREN_CIERRA", 
			"COMA", "CUIDADO", "NUMERO", "MEDIDA", "NOMBRE", "COMENTARIO", "ESPACIO", 
			"ESPACIOHERRAMIENTA", "TIPOHERRAMIENTA", "ESPACIOHERRAJE", "TIPOHERRAJE", 
			"ESPACIOANUNCIO", "ANUNCIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IkeaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IkeaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public Declaracion_inicioContext declaracion_inicio() {
			return getRuleContext(Declaracion_inicioContext.class,0);
		}
		public Declaracion_finContext declaracion_fin() {
			return getRuleContext(Declaracion_finContext.class,0);
		}
		public TerminalNode EOF() { return getToken(IkeaParser.EOF, 0); }
		public List<PasoContext> paso() {
			return getRuleContexts(PasoContext.class);
		}
		public PasoContext paso(int i) {
			return getRuleContext(PasoContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			declaracion_inicio();
			setState(33); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(33);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NUMERO:
					{
					setState(31);
					paso();
					}
					break;
				case CUIDADO:
					{
					setState(32);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(35); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CUIDADO || _la==NUMERO );
			setState(37);
			declaracion_fin();
			setState(38);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracion_inicioContext extends ParserRuleContext {
		public TerminalNode INICIO_MONTAJE() { return getToken(IkeaParser.INICIO_MONTAJE, 0); }
		public TerminalNode PUNTO() { return getToken(IkeaParser.PUNTO, 0); }
		public TerminalNode NOMBRE() { return getToken(IkeaParser.NOMBRE, 0); }
		public TerminalNode NUMERO() { return getToken(IkeaParser.NUMERO, 0); }
		public TerminalNode COMO() { return getToken(IkeaParser.COMO, 0); }
		public TerminalNode EXTENSION_DE() { return getToken(IkeaParser.EXTENSION_DE, 0); }
		public Mueble_referenciaContext mueble_referencia() {
			return getRuleContext(Mueble_referenciaContext.class,0);
		}
		public Declaracion_inicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterDeclaracion_inicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitDeclaracion_inicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitDeclaracion_inicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion_inicioContext declaracion_inicio() throws RecognitionException {
		Declaracion_inicioContext _localctx = new Declaracion_inicioContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracion_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(INICIO_MONTAJE);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOMBRE) {
				{
				setState(41);
				match(NOMBRE);
				}
			}

			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMERO) {
				{
				setState(44);
				match(NUMERO);
				}
			}

			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMO) {
				{
				setState(47);
				match(COMO);
				setState(48);
				match(EXTENSION_DE);
				setState(49);
				mueble_referencia();
				}
			}

			setState(52);
			match(PUNTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracion_finContext extends ParserRuleContext {
		public TerminalNode FIN() { return getToken(IkeaParser.FIN, 0); }
		public TerminalNode PUNTO() { return getToken(IkeaParser.PUNTO, 0); }
		public Declaracion_finContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_fin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterDeclaracion_fin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitDeclaracion_fin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitDeclaracion_fin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion_finContext declaracion_fin() throws RecognitionException {
		Declaracion_finContext _localctx = new Declaracion_finContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion_fin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(FIN);
			setState(55);
			match(PUNTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PasoContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(IkeaParser.NUMERO, 0); }
		public TerminalNode GUION() { return getToken(IkeaParser.GUION, 0); }
		public List<AccionContext> accion() {
			return getRuleContexts(AccionContext.class);
		}
		public AccionContext accion(int i) {
			return getRuleContext(AccionContext.class,i);
		}
		public TerminalNode PUNTO() { return getToken(IkeaParser.PUNTO, 0); }
		public List<TerminalNode> PUNTOYCOMA() { return getTokens(IkeaParser.PUNTOYCOMA); }
		public TerminalNode PUNTOYCOMA(int i) {
			return getToken(IkeaParser.PUNTOYCOMA, i);
		}
		public PasoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paso; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterPaso(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitPaso(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitPaso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PasoContext paso() throws RecognitionException {
		PasoContext _localctx = new PasoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_paso);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(NUMERO);
			setState(58);
			match(GUION);
			setState(59);
			accion();
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUNTOYCOMA) {
				{
				{
				setState(60);
				match(PUNTOYCOMA);
				setState(61);
				accion();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(PUNTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComentarioContext extends ParserRuleContext {
		public TerminalNode CUIDADO() { return getToken(IkeaParser.CUIDADO, 0); }
		public TerminalNode ANUNCIO() { return getToken(IkeaParser.ANUNCIO, 0); }
		public ComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterComentario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitComentario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitComentario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComentarioContext comentario() throws RecognitionException {
		ComentarioContext _localctx = new ComentarioContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comentario);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(CUIDADO);
			setState(70);
			match(ANUNCIO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AccionContext extends ParserRuleContext {
		public TerminalNode INSERTAR() { return getToken(IkeaParser.INSERTAR, 0); }
		public Herraje_listaContext herraje_lista() {
			return getRuleContext(Herraje_listaContext.class,0);
		}
		public TerminalNode EN() { return getToken(IkeaParser.EN, 0); }
		public TerminalNode SOBRE() { return getToken(IkeaParser.SOBRE, 0); }
		public List<PiezaContext> pieza() {
			return getRuleContexts(PiezaContext.class);
		}
		public PiezaContext pieza(int i) {
			return getRuleContext(PiezaContext.class,i);
		}
		public List<Mueble_referenciaContext> mueble_referencia() {
			return getRuleContexts(Mueble_referenciaContext.class);
		}
		public Mueble_referenciaContext mueble_referencia(int i) {
			return getRuleContext(Mueble_referenciaContext.class,i);
		}
		public List<TerminalNode> Y() { return getTokens(IkeaParser.Y); }
		public TerminalNode Y(int i) {
			return getToken(IkeaParser.Y, i);
		}
		public List<DistanciaContext> distancia() {
			return getRuleContexts(DistanciaContext.class);
		}
		public DistanciaContext distancia(int i) {
			return getRuleContext(DistanciaContext.class,i);
		}
		public List<PosicionContext> posicion() {
			return getRuleContexts(PosicionContext.class);
		}
		public PosicionContext posicion(int i) {
			return getRuleContext(PosicionContext.class,i);
		}
		public List<TerminalNode> CON() { return getTokens(IkeaParser.CON); }
		public TerminalNode CON(int i) {
			return getToken(IkeaParser.CON, i);
		}
		public Herramienta_listaContext herramienta_lista() {
			return getRuleContext(Herramienta_listaContext.class,0);
		}
		public TerminalNode UNIR() { return getToken(IkeaParser.UNIR, 0); }
		public TerminalNode COLOCAR() { return getToken(IkeaParser.COLOCAR, 0); }
		public TerminalNode NUMERO() { return getToken(IkeaParser.NUMERO, 0); }
		public TerminalNode GIRAR() { return getToken(IkeaParser.GIRAR, 0); }
		public TerminalNode ORIENTACION() { return getToken(IkeaParser.ORIENTACION, 0); }
		public TerminalNode POSICION() { return getToken(IkeaParser.POSICION, 0); }
		public TerminalNode HACIA() { return getToken(IkeaParser.HACIA, 0); }
		public TerminalNode CONECTAR() { return getToken(IkeaParser.CONECTAR, 0); }
		public TerminalNode A() { return getToken(IkeaParser.A, 0); }
		public TerminalNode MARCAR() { return getToken(IkeaParser.MARCAR, 0); }
		public TerminalNode PARA() { return getToken(IkeaParser.PARA, 0); }
		public TerminalNode NIVELAR() { return getToken(IkeaParser.NIVELAR, 0); }
		public TerminalNode FIJAR() { return getToken(IkeaParser.FIJAR, 0); }
		public TerminalNode PAREN_ABRE() { return getToken(IkeaParser.PAREN_ABRE, 0); }
		public TerminalNode OPCIONAL() { return getToken(IkeaParser.OPCIONAL, 0); }
		public TerminalNode PAREN_CIERRA() { return getToken(IkeaParser.PAREN_CIERRA, 0); }
		public AccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_accion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).enterAccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IkeaParserListener ) ((IkeaParserListener)listener).exitAccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IkeaParserVisitor ) return ((IkeaParserVisitor<? extends T>)visitor).visitAccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AccionContext accion() throws RecognitionException {
		AccionContext _localctx = new AccionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_accion);
		int _la;
		try {
			int _alt;
			setState(199);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INSERTAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(INSERTAR);
				setState(73);
				herraje_lista();
				setState(74);
				_la = _input.LA(1);
				if ( !(_la==EN || _la==SOBRE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(77);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PIEZA:
					{
					setState(75);
					pieza();
					}
					break;
				case MUEBLE:
					{
					setState(76);
					mueble_referencia();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Y) {
					{
					{
					setState(79);
					match(Y);
					setState(80);
					pieza();
					}
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(88);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case A:
							{
							setState(86);
							distancia();
							}
							break;
						case EN:
						case SOBRE:
						case BAJO:
						case JUNTO_A:
							{
							setState(87);
							posicion();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						} 
					}
					setState(92);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 537796608L) != 0)) {
					{
					setState(95);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case A:
						{
						setState(93);
						distancia();
						}
						break;
					case EN:
					case SOBRE:
					case BAJO:
					case JUNTO_A:
						{
						setState(94);
						posicion();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(100);
					match(CON);
					setState(101);
					herramienta_lista();
					}
				}

				}
				break;
			case UNIR:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				match(UNIR);
				setState(107);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PIEZA:
					{
					setState(105);
					pieza();
					}
					break;
				case MUEBLE:
					{
					setState(106);
					mueble_referencia();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(109);
					match(Y);
					{
					setState(110);
					pieza();
					}
					}
					}
					setState(113); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Y );
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 537796608L) != 0)) {
					{
					setState(117);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case A:
						{
						setState(115);
						distancia();
						}
						break;
					case EN:
					case SOBRE:
					case BAJO:
					case JUNTO_A:
						{
						setState(116);
						posicion();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case COLOCAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				match(COLOCAR);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NUMERO) {
					{
					setState(123);
					match(NUMERO);
					}
				}

				setState(126);
				pieza();
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 537796608L) != 0)) {
					{
					setState(129);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case A:
						{
						setState(127);
						distancia();
						}
						break;
					case EN:
					case SOBRE:
					case BAJO:
					case JUNTO_A:
						{
						setState(128);
						posicion();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case GIRAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				match(GIRAR);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EN || _la==HACIA) {
					{
					setState(135);
					_la = _input.LA(1);
					if ( !(_la==EN || _la==HACIA) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(138);
				_la = _input.LA(1);
				if ( !(_la==ORIENTACION || _la==POSICION) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case CONECTAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(139);
				match(CONECTAR);
				setState(140);
				mueble_referencia();
				setState(141);
				match(A);
				setState(142);
				mueble_referencia();
				setState(145);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
				case 1:
					{
					setState(143);
					match(CON);
					setState(144);
					herraje_lista();
					}
					break;
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 537796608L) != 0)) {
					{
					setState(149);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case A:
						{
						setState(147);
						distancia();
						}
						break;
					case EN:
					case SOBRE:
					case BAJO:
					case JUNTO_A:
						{
						setState(148);
						posicion();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(153);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(154);
					match(CON);
					setState(155);
					herramienta_lista();
					}
				}

				}
				break;
			case MARCAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(158);
				match(MARCAR);
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PARA) {
					{
					setState(159);
					match(PARA);
					}
				}

				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PIEZA) {
					{
					setState(162);
					pieza();
					}
				}

				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 537796608L) != 0)) {
					{
					setState(167);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case A:
						{
						setState(165);
						distancia();
						}
						break;
					case EN:
					case SOBRE:
					case BAJO:
					case JUNTO_A:
						{
						setState(166);
						posicion();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(171);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(172);
					match(CON);
					setState(173);
					herramienta_lista();
					}
				}

				}
				break;
			case NIVELAR:
				enterOuterAlt(_localctx, 7);
				{
				setState(176);
				match(NIVELAR);
				setState(179);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PIEZA:
					{
					setState(177);
					pieza();
					}
					break;
				case MUEBLE:
					{
					setState(178);
					mueble_referencia();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(181);
					match(CON);
					setState(182);
					herramienta_lista();
					}
				}

				}
				break;
			case FIJAR:
				enterOuterAlt(_localctx, 8);
				{
				setState(185);
				match(FIJAR);
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PAREN_ABRE) {
					{
					setState(186);
					match(PAREN_ABRE);
					setState(187);
					match(OPCIONAL);
					setState(188);
					match(PAREN_CIERRA);
					}
				}

				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(191);
					match(CON);
					}
				}

				setState(194);
				herraje_lista();
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CON) {
					{
					setState(195);
					match(CON);
					setState(196);
					herramienta_lista();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
